--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@types/node": "^16.11.47",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "16.8",
+    "react-dom": "16.8",
+    "react-is": "16.8",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.0.0",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
